# pren

./: AGENTS.md  Cargo.toml  README.md
pren-cli/: Cargo.toml
pren-cli/src/: config.rs  constants.rs  main.rs
pren-core/: Cargo.toml
pren-core/src/: file_storage.rs  lib.rs  llm.rs  parser.rs  prompt.rs  registry.rs  storage.rs
prompt-library/: README.md
prompt-library/meta-prompts/: prompt-generator.md
prompt-library/output-formats/: pren-format.md
prompt-library/persona/: prompt-engineer.md
prompt-library/tone/: technical-professional.md
src/: file_storage.rs  lib.rs  parser.rs  prompt.rs  registry.rs
