[package]
name = "pren-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde-frontmatter = "0.1.0"
nom = "8.0.0"
tempfile = "3.22.0"
walkdir = "2.5.0"
chrono = { version="0.4.42" , features = ["serde"]}
rig-core = "0.20.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "2.0.16"

[lib]
name = "pren_core"
path = "src/lib.rs"
